--- a/run_onchange_install-packages.sh.tmpl
+++ b/run_onchange_install-packages.sh.tmpl
@@ -18,6 +18,10 @@ ERROR(){
 
 {{ if eq .chezmoi.os "linux" -}}
 {{ else if eq .chezmoi.os "darwin" -}}
+command -v brew >/dev/null 2>&1 \
+&& INFO "'homebrew' is already installed." \
+|| (NONINTERACTIVE=1 /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)")
+
 manually_install() {
   cmd=$1; repo=$1; msg=$1
   if [[ $1 =~ ^(.+)=(.+)=(.+)$ ]]; then
@@ -33,7 +37,7 @@ manually_install() {
   fi
 }
 
-ensure_install() {
+ensure_brew_install() {
   cmd=$1; repo=$1
   if [[ $1 =~ ^(.+)=(.+)$ ]]; then
     cmd=${BASH_REMATCH[1]}
@@ -48,22 +52,22 @@ ensure_install() {
 }
 
 # manually_install xcode=xcode="Xcode can be installed from the App Store: 'https://apps.apple.com/us/app/xcode/id497799835'"
-ensure_install gcc
-ensure_install zsh
-ensure_install git
-ensure_install curl
-ensure_install chezmoi
-ensure_install nvim=neovim
-ensure_install bat
-ensure_install jq
-ensure_install yq
-ensure_install eza
-ensure_install rg=ripgrep
-ensure_install fd
-ensure_install fzf
-ensure_install gitui
-ensure_install file
-# ensure_install kafka
+ensure_brew_install gcc
+ensure_brew_install zsh
+ensure_brew_install git
+ensure_brew_install curl
+ensure_brew_install chezmoi
+ensure_brew_install nvim=neovim
+ensure_brew_install bat
+ensure_brew_install jq
+ensure_brew_install yq
+ensure_brew_install eza
+ensure_brew_install rg=ripgrep
+ensure_brew_install fd
+ensure_brew_install fzf
+ensure_brew_install gitui
+ensure_brew_install file
+# ensure_brew_install kafka
 
 # Ensure 'FiraCode Nerd Font Mono' is installed
 font_family_names=$(osascript << SCPT
