--- a/.chezmoiscripts/darwin/run_onchange_darwin-install-packages.sh.tmpl
+++ b/.chezmoiscripts/darwin/run_onchange_darwin-install-packages.sh.tmpl
@@ -30,7 +30,7 @@ command -v {{ .cmd }} >/dev/null 2>&1 \
 {{ range .packages.darwin.brews.commands -}}
 command -v {{ .cmd }} >/dev/null 2>&1 \
   && INFO "'{{ .name }}' is already installed." \
-  || (INFO "Installing '{{ .name }}'..." && brew install {{ .name }})
+  || (INFO "Installing '{{ .name }}'..." && brew install -v {{ .name }})
 {{ end -}}
 
 ## fonts
