chore: polish dotfiles

--- a/.chezmoiscripts/darwin/run_onchange_darwin-install-packages.sh.tmpl
+++ b/.chezmoiscripts/darwin/run_onchange_darwin-install-packages.sh.tmpl
@@ -9,7 +9,7 @@ YELLOW="\033[33;m"
 GREEN="\033[32;m"
 
 HINT() {
-  echo -e "$GREEN===== $@ ======$DEFAULT"
+  echo -e "$GREEN====== $@ ======$DEFAULT"
 }
 INFO(){
   echo -e "$BLUE[INFO] $@ $DEFAULT"
