chore: polish dotfiles

--- a/.chezmoiscripts/linux/run_onchange_linux-install-packages.sh.tmpl
+++ b/.chezmoiscripts/linux/run_onchange_linux-install-packages.sh.tmpl
@@ -40,6 +40,7 @@ command -v docker >/dev/null 2>&1 \
   || (INFO "Installing 'docker'..." && {{ .install_script }})
 {{ end -}}
 {{ end -}}
+{{ end -}}
 
 # brews
 ## commands
