--- a/.chezmoiscripts/linux/run_onchange_linux-install-packages.sh.tmpl
+++ b/.chezmoiscripts/linux/run_onchange_linux-install-packages.sh.tmpl
@@ -38,11 +38,13 @@ HINT "docker"
 command -v docker >/dev/null 2>&1 \
   && INFO "'docker' is already installed." \
   || (INFO "Installing 'docker'..." && {{ .install_script }})
-{{ end -}}
-{{ end -}}
+{{ if .addUserToGroup -}}
 groups | grep -q docker \
   && INFO "You are already in the 'docker' group." \
   || (INFO "Adding you to the 'docker' group..." && sudo usermod -aG docker {{ .chezmoi.username }})
+{{ end -}}
+{{ end -}}
+{{ end -}}
 {{ end -}}
 
 # brews
