chore: polish dotfiles

--- a/.chezmoiscripts/linux/run_onchange_linux-install-packages.sh.tmpl
+++ b/.chezmoiscripts/linux/run_onchange_linux-install-packages.sh.tmpl
@@ -1,25 +1,7 @@
 {{ if eq .chezmoi.os "linux" -}}
 #!/usr/bin/env bash
 set -euo pipefail
-
-DEFAULT="\033[0;m"
-RED="\033[31;m"
-BLUE="\033[34;m"
-YELLOW="\033[33;m"
-GREEN="\033[32;m"
-
-HINT() {
-  echo -e "$GREEN====== $@ ======$DEFAULT"
-}
-INFO(){
-  echo -e "$BLUE[INFO] $@ $DEFAULT"
-}
-WARN(){
-  echo -e "$YELLOW[WARN] $@ $DEFAULT"
-}
-ERROR(){
-  echo -e "$RED[ERROR] $@ $DEFAULT"
-}
+{{ template "shell_logger" . -}}
 
 {{ if .packages.linux.homebrew.enabled -}}
 {{ with .packages.linux.homebrew -}}
