--- a/dot_scripts/executable_sudoeradd.sh.tmpl
+++ b/dot_scripts/executable_sudoeradd.sh.tmpl
@@ -1,7 +1,8 @@
 {{ if eq .chezmoi.os "linux" -}}
 #!/usr/bin/env bash
 set -euo pipefail
-groups | grep -q root || echo "You are not in the root group, please run this script as root" && exit 1
+{{ template "shell_logger" . -}}
+groups | grep -q root || WARN "You are not in the root group, please run this script as root." && exit 1
 echo "Please Input the username you want to add: "
 read username
 sudo useradd $username
