--- a/.chezmoiscripts/linux/run_onchange_linux-install-packages.sh.tmpl
+++ b/.chezmoiscripts/linux/run_onchange_linux-install-packages.sh.tmpl
@@ -13,13 +13,13 @@ command -v {{ .cmd }} >/dev/null 2>&1 \
 {{ template "brew/shellenv" . -}}
 {{ end -}}
 
-{{ if .packages.linux.docker.enabled -}}
-HINT "docker"
-{{ range .packages.linux.docker.osRelease -}}
+{{ if .services.linux.docker.enabled -}}
+HINT "[service] docker"
+{{ range .services.linux.docker.osRelease -}}
 {{ if eq .osReleaseId $.chezmoi.osRelease.id -}}
-command -v docker >/dev/null 2>&1 \
+{{ .checker }} \
   && INFO "'docker' is already installed." \
-  || (INFO "Installing 'docker'..." && {{ .install_script }})
+  || (INFO "Installing 'docker'..." && {{ .installer }})
 {{ if .addUserToGroup -}}
 groups | grep -q docker \
   && INFO "You are already in the 'docker' group." \
