--- a/.chezmoiscripts/linux/run_onchange_linux-install-packages.sh.tmpl
+++ b/.chezmoiscripts/linux/run_onchange_linux-install-packages.sh.tmpl
@@ -21,15 +21,7 @@ command -v {{ .cmd }} >/dev/null 2>&1 \
 HINT "[service] docker"
 {{ range .services.linux.docker.osRelease -}}
 {{ if eq .osReleaseId $.chezmoi.osRelease.id -}}
-set +e
-{{ .checker }}
-set -e
-if [ $? -eq 0 ]; then
-  INFO "'docker' is already installed."
-else
-  INFO "Installing 'docker'..."
-  {{ .installer }}
-fi
+{{ .checker }} && INFO "'docker' is already installed." || (INFO "Installing 'docker'..." && {{ .installer }})
 {{ if .addUserToGroup -}}
 groups | grep -q docker \
   && INFO "You are already in the 'docker' group." \
