--- a/.chezmoiscripts/linux/run_onchange_linux-install-packages.sh.tmpl
+++ b/.chezmoiscripts/linux/run_onchange_linux-install-packages.sh.tmpl
@@ -21,7 +21,16 @@ command -v {{ .cmd }} >/dev/null 2>&1 \
 HINT "[service] docker"
 {{ range .services.linux.docker.osRelease -}}
 {{ if eq .osReleaseId $.chezmoi.osRelease.id -}}
-{{ .checker }} && INFO "'docker' is already installed." || (INFO "Installing 'docker'..." && {{ .installer }})
+set +e
+{{ .checker }}
+if [[ $? -eq 0 ]]; 
+then INFO "'docker' is already installed." && docker_checker=true;
+else INFO "Installing 'docker'..." && docker_checker=false;
+fi
+set -e
+if [[ "$docker_checker" == "false" ]]; then
+  {{ .installer }})
+fi
 {{ if .addUserToGroup -}}
 groups | grep -q docker \
   && INFO "You are already in the 'docker' group." \
