--- a/.chezmoiscripts/linux/run_onchange_linux-install-packages.sh.tmpl
+++ b/.chezmoiscripts/linux/run_onchange_linux-install-packages.sh.tmpl
@@ -47,7 +47,7 @@ HINT "[homebrew] commands"
 {{ range .packages.linux.brews.commands -}}
 command -v {{ .cmd }} >/dev/null 2>&1 \
   && INFO "'{{ .name }}' is already installed." \
-  || (INFO "Installing '{{ .name }}'..." && brew install -v {{ .name }})
+  || (INFO "Installing '{{ .name }}'..." && brew install {{ .name }})
 {{ end -}}
 {{ end -}}
 
