--- a/.chezmoiscripts/linux/run_once_linux-install-dependcies.sh.tmpl
+++ b/.chezmoiscripts/linux/run_once_linux-install-dependcies.sh.tmpl
@@ -1,5 +1,6 @@
 {{ if eq .chezmoi.os "linux" -}}
 {{ if eq .chezmoi.osRelease.id "opencloudos" -}}
+#!/usr/bin/env bash
 sudo yum update -y
 sudo yum install -y git curl
 {{ end -}}
