--- a/dot_config/zsh/init.zsh.tmpl
+++ b/dot_config/zsh/init.zsh.tmpl
@@ -22,6 +22,10 @@ retry() {
   done
 }
 
+decode_unicode_escape() {
+  python3 -c "import sys; arg = ' '.join(sys.argv[1:]) if len(sys.argv) > 1 else sys.stdin.read(); print(arg.encode().decode('unicode_escape'), end='')" $@
+}
+
 export ZSH_CONFIG_HOME="$(dirname $0)"
 export PATH="$HOME/.local/bin:$PATH"
 {{ template "xdgenv" . -}}
