--- a/.chezmoiscripts/linux/run_onchange_linux-install-packages.sh.tmpl
+++ b/.chezmoiscripts/linux/run_onchange_linux-install-packages.sh.tmpl
@@ -1,76 +1,72 @@
-{{ if and (eq .chezmoi.os "linux") (ne .chezmoi.username "root") -}}
+{{ define "script_checker" -}}
+script_checker_exitcode=1
+set +e
+{{ if eq .checker.type "command" -}}
+command -v {{ .checker.command }} >/dev/null 2>&1
+{{ else if eq .checker.type "script" -}}
+{{ .checker.script }}
+{{ end -}}
+script_checker_exitcode=$?
+set -e
+{{ end -}}
+
+{{ define "homebrew_checker" -}}
+homebrew_checker_exitcode=1
+set +e
+{{ if eq .checker.type "command" -}}
+command -v {{ .checker.command }} >/dev/null 2>&1
+{{ else if eq .checker.type "font" -}}
+echo $font_family_names | sed 's/, /\n/g' | grep -E '^{{ .checker.font }}$' > /dev/null 2>&1
+{{ else if eq .checker.type "cask" -}}
+echo $homebrew_casks | sed 's/ /\n/g' | grep -E '^{{ .checker.cask }}$' > /dev/null 2>&1
+{{ else if eq .checker.type "script" -}}
+{{ .checker.script }}
+{{ end -}}
+homebrew_checker_exitcode=$?
+set -e
+{{ end -}}
+
+
+{{ if eq .chezmoi.os "darwin" -}}
 #!/usr/bin/env bash
 set -euo pipefail
 {{ template "shell_logger" . -}}
 
-# homebrew
-{{ if .packages.linux.homebrew.enabled -}}
-{{ with .packages.linux.homebrew -}}
-HINT "homebrew"
-if ! [[ "$PATH" =~ "/home/linuxbrew/.linuxbrew/bin" ]]; then
-  INFO "Adding 'homebrew' to PATH temporarily..."
-  export PATH="/home/linuxbrew/.linuxbrew/bin:$PATH"
+## `script` type
+{{ range $id, $options := .darwin.packages }}{{ if eq $options.type "script" }}{{ if $options.enable -}}
+{{ template "script_checker" $options -}}
+if [[ $script_checker_exitcode -ne 0 ]]; then
+  INFO "Installing '{{ $id }}'..."
+  {{ $options.installer }}
+else
+  INFO "'{{ $id }}' is already installed."
 fi
-command -v {{ .cmd }} >/dev/null 2>&1 \
-  && INFO "'homebrew' is already installed." \
-  || (INFO "Installing 'homebrew'..." && {{ .install_script }})
-{{ end -}}
-{{ template "brew/shellenv" . -}}
-{{ end -}}
+{{ end }}{{ end }}{{ end -}}
 
-# docker
-{{ if .services.linux.docker.enabled -}}
-HINT "[service] docker"
-{{ range .services.linux.docker.osRelease -}}
-{{ if eq .osReleaseId $.chezmoi.osRelease.id -}}
-set +e
-{{ .checker }}
-if [[ $? -eq 0 ]]; 
-then INFO "'docker' is already installed." && docker_checker=true;
-else INFO "Installing 'docker'..." && docker_checker=false;
-fi
+
+## `homebrew` type
+homebrew_checker_exitcode=1
 set -e
-if [[ "$docker_checker" == "false" ]]; then
-  {{ .installer }}
-fi
-{{ if .addUserToGroup -}}
-groups | grep -q docker \
-  && INFO "You are already in the 'docker' group." \
-  || (INFO "Adding you to the 'docker' group..." && sudo usermod -aG docker {{ $.chezmoi.username }})
-{{ end -}}
-{{ end -}}
-{{ end -}}
-{{ end -}}
-
-# v2rayA
-{{ if .services.linux.v2rayA.enabled -}}
-HINT "[service] v2rayA"
-{{ range .services.linux.v2rayA.osRelease -}}
-{{ if eq .osReleaseId $.chezmoi.osRelease.id -}}
+command -v brew >/dev/null 2>&1
+homebrew_checker_exitcode=$?
 set +e
-{{ .checker }}
-if [[ $? -eq 0 ]]; 
-then INFO "'v2rayA' is already installed." && v2rayA_checker=true;
-else INFO "Installing 'v2rayA'..." && v2rayA_checker=false;
+if [[ $homebrew_checker_exitcode -ne 0 ]]; then
+  INFO "'homebrew' is not installed, so skipping the installation of homebrew packages."
+else
+{{ range $id, $options := .darwin.packages }}{{ if eq $options.type "homebrew" }}{{ if $options.enable -}}
+{{ template "homebrew_checker" $options -}}
+if [[ $homebrew_checker_exitcode -ne 0 ]]; then
+  INFO "Installing '{{ $id }}'..."
+  {{- if eq $options.installer.type "formula" }}
+  brew install {{ $id }}
+  {{- else }}
+  ERROR "Unsupported installer type '{{ $options.installer.type }}' for '{{ $id }}'."
+  {{- end}}
+else
+  INFO "'{{ $id }}' is already installed."
 fi
-set -e
-if [[ "$v2rayA_checker" == "false" ]]; then
-  {{ .installer }}
+{{ end }}{{ end }}{{ end -}}
 fi
-{{ end -}}
-{{ end -}}
-{{ end -}}
-
-# brews
-## commands
-{{ if .packages.linux.brews.commands -}}
-HINT "[homebrew] commands"
-{{ range .packages.linux.brews.commands -}}
-command -v {{ .cmd }} >/dev/null 2>&1 \
-  && INFO "'{{ .name }}' is already installed." \
-  || (INFO "Installing '{{ .name }}'..." && brew install {{ .name }})
-{{ end -}}
-{{ end -}}
 
 
 {{ end -}}
