chore: polish dotfiles

--- a/.chezmoiscripts/linux/run_onchange_linux-install-packages.sh.tmpl
+++ b/.chezmoiscripts/linux/run_onchange_linux-install-packages.sh.tmpl
@@ -31,12 +31,12 @@ set -e
 #!/usr/bin/env bash
 set -euo pipefail
 {{ template "shell_logger" . -}}
+{{ if eq .chezmoi.username "root" -}}
+INFO "Detected that you are running as root, so skipping the installation of packages."
 
+{{ else -}}
 ## `script` type
 {{ range $id, $options := .linux.packages }}{{ if eq $options.type "script" }}{{ if $options.enable -}}
-{{ if and (eq $id "homebrew") (eq $.chezmoi.username "root") -}}
-INFO "Skip the installation of 'homebrew' because the user is 'root'."
-{{ else -}}
 {{ template "script_checker" $options -}}
 if [[ $script_checker_exitcode -ne 0 ]]; then
   INFO "Installing '{{ $id }}'..."
@@ -44,7 +44,6 @@ if [[ $script_checker_exitcode -ne 0 ]]; then
 else
   INFO "'{{ $id }}' is already installed."
 fi
-{{ end -}}
 {{ end }}{{ end }}{{ end -}}
 
 
@@ -73,4 +72,5 @@ fi
 fi
 
 
+{{ end -}}
 {{ end -}}
