chore: polish dotfiles

--- a/.chezmoiscripts/linux/run_onchange_linux-install-packages.sh.tmpl
+++ b/.chezmoiscripts/linux/run_onchange_linux-install-packages.sh.tmpl
@@ -41,6 +41,9 @@ INFO "Detected that you are running as root, so skipping the installation of pac
 if [[ $script_checker_exitcode -ne 0 ]]; then
   INFO "Installing '{{ $id }}'..."
   {{ $options.installer }}
+  {{- if $options.post_install }}
+  {{ $options.post_install }}
+  {{- end }}
 else
   INFO "'{{ $id }}' is already installed."
 fi
