--- a/dot_services/docker/executable_install.sh.tmpl
+++ b/dot_services/docker/executable_install.sh.tmpl
@@ -11,13 +11,15 @@ groups | grep -q docker \
 INFO "If you want to use registry mirrors, please edit /etc/docker/daemon.json. see https://cloud.tencent.com/document/product/1207/45596"
 echo '
 # example like this
-cat <<EOF | sudo tee /etc/docker/daemon.json
+mkdir -p /etc/docker
+cat <<EOF > /etc/docker/daemon.json
 {
   "registry-mirrors": [
     "https://mirror.ccs.tencentyun.com"
   ]
 }
 EOF
+sudo systemctl restart docker
 '
 {{ end -}}
 {{ end -}}
