--- a/dot_services/docker/executable_install.sh.tmpl
+++ b/dot_services/docker/executable_install.sh.tmpl
@@ -2,24 +2,27 @@
 #!/usr/bin/env bash
 {{ template "shell_logger" . -}}
 {{ if eq .chezmoi.osRelease.id "opencloudos" -}}
-sudo yum install -y docker docker-compose
-sudo systemctl enable docker
-sudo systemctl start docker
+if ! command -v docker >/dev/null 2>&1; then
+  sudo yum install -y docker docker-compose
+  sudo systemctl enable docker
+  sudo systemctl start docker
+  INFO "If you want to use registry mirrors, please edit /etc/docker/daemon.json. see https://cloud.tencent.com/document/product/1207/45596"
+  echo '
+  # example like this
+  mkdir -p /etc/docker
+  cat <<EOF > /etc/docker/daemon.json
+  {
+    "registry-mirrors": [
+      "https://mirror.ccs.tencentyun.com"
+    ]
+  }
+  EOF
+  sudo systemctl restart docker
+  '
+else
 groups | grep -q docker \
   && INFO "You are already in the 'docker' group." \
   || (INFO "Added you to the 'docker' group, please re-login." && sudo usermod -aG docker {{ .chezmoi.username }})
-INFO "If you want to use registry mirrors, please edit /etc/docker/daemon.json. see https://cloud.tencent.com/document/product/1207/45596"
-echo '
-# example like this
-mkdir -p /etc/docker
-cat <<EOF > /etc/docker/daemon.json
-{
-  "registry-mirrors": [
-    "https://mirror.ccs.tencentyun.com"
-  ]
-}
-EOF
-sudo systemctl restart docker
-'
+fi
 {{ end -}}
 {{ end -}}
