--- a/dot_services/k3s/executable_install.sh.tmpl
+++ b/dot_services/k3s/executable_install.sh.tmpl
@@ -2,6 +2,6 @@
 #!/usr/bin/env bash
 {{ template "shell_logger" . -}}
 {{ if eq .chezmoi.osRelease.id "opencloudos" -}}
-curl -sfL https://get.k3s.io | INSTALL_K3S_EXEC="--disable traefik --docker" INSTALL_K3S_SKIP_SELINUX_RPM=true sh -
+curl -sfL https://get.k3s.io | INSTALL_K3S_EXEC="--disable traefik" INSTALL_K3S_SKIP_SELINUX_RPM=true sh -
 {{ end -}}
 {{ end -}}
