--- a/dot_config/nushell/env.nu.tmpl
+++ b/dot_config/nushell/env.nu.tmpl
@@ -12,8 +12,12 @@ $env.XDG_DATA_HOME = ($env.HOME | path join ".local" "share")
 $env.XDG_CACHE_HOME = ($env.HOME | path join ".cache")
 $env.XDG_STATE_HOME = ($env.HOME | path join ".local" "state")
 
+# Editor
+$env.EDITOR = "nvim"
+
 # PATH
 $env.PATH = ($env.PATH | prepend ($env.HOME | path join ".local" "bin"))
+$env.PATH = ($env.PATH | prepend ($env.HOME | path join ".opencode" "bin"))
 
 {{ if eq .chezmoi.os "darwin" -}}
 # Homebrew
