--- a/dot_config/nushell/env.nu.tmpl
+++ b/dot_config/nushell/env.nu.tmpl
@@ -18,6 +18,7 @@ $env.EDITOR = "nvim"
 # PATH
 $env.PATH = ($env.PATH | prepend ($env.HOME | path join ".local" "bin"))
 $env.PATH = ($env.PATH | prepend ($env.HOME | path join ".opencode" "bin"))
+$env.PATH = ($env.PATH | prepend ($env.HOME | path join ".bun" "bin"))
 
 {{ if eq .chezmoi.os "darwin" -}}
 # Homebrew
